First bigger code refactor
Add ConsolePrinter and put all console logic into it
Add class for each command
Remove any console and command logic from main class
Use new classes in main class instead

--- a/Hagot/src/main/resources/plugin.yml
+++ b/Hagot/src/main/resources/plugin.yml
@@ -8,8 +8,8 @@ website: https://github.com/Hakej
 
 commands:
   test:
-    description: test
-    usage: /test
+    description: Test command
+    usage: /<command>
   healme:
     description: Healing command
     usage: /<command>
