--- a/Hagot/src/main/resources/plugin.yml
+++ b/Hagot/src/main/resources/plugin.yml
@@ -13,3 +13,6 @@ commands:
   healme:
     description: Healing command
     usage: /<command>
+  toggle:
+    description: Command for toggling event handlers, like breaking block or placing one
+    usage: /<command>
